plugins {
    id 'com.android.application'
}

android {
    namespace 'com.example.intercept'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.intercept"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "InterceptActivity-${variant.name}-${defaultConfig.versionName}.apk"
        }
    }
}

dependencies {
    // Xposed API
    compileOnly 'de.robv.android.xposed:api:82'
}
